Table users {
    user_id varchar [pk]
    username VARCHAR
    email VARCHAR [unique]
    password VARCHAR
    full_name VARCHAR
    phone VARCHAR
    profile_picture VARCHAR
    total_score INTEGER
    total_xp INTEGER
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

Table quizzes {
    quiz_id UUID [pk]
    grade ENUM('SD-Kelas-1', 'SD-Kelas-2', 'SD-Kelas-3', 'SD-Kelas-4', 'SD-Kelas-5', 'SD-Kelas-6', 'SMP-Kelas-7', 'SMP-Kelas-8', 'SMP-Kelas-9', 'SMA-Kelas-10', 'SMA-Kelas-11', 'SMA-Kelas-12', 'S1', 'S2')
    subject ENUM('Bahasa Indonesia', 'Sains', 'Matematika', 'Sejarah', 'Geografi', 'Fisika', 'Kimia', 'Biologi', 'Pesantren')
    questions JSONB
    created_at TIMESTAMP
    created_by UUID [ref: > users.user_id]
}

Table user_quiz_scores {
    score_id UUID [pk]
    user_id UUID [ref: > users.user_id]
    quiz_id UUID [ref: > quizzes.quiz_id]
    score INTEGER
    xp_earned INTEGER
    completed_at TIMESTAMP
}

Table leaderboard {
    leaderboard_id UUID [pk]
    user_id UUID [ref: > users.user_id]
    total_score INTEGER
    total_xp INTEGER
    rank INTEGER
    updated_at TIMESTAMP
}
